# jinn

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/app/: main.cpp
src/cli/base/: app.cpp  app.hpp  command.hpp
src/cli/commands/: build_command.cpp  build_command.hpp  init.cpp  init.hpp  new_command.cpp  registrar.cpp  registrar.hpp
src/core/: build_generator.cpp  build_generator.hpp  project.cpp  project.hpp  project_errors.cpp  project_errors.hpp
